--- a/LEC 21 SSR PROJECT/src/views/index.ejs
+++ b/LEC 21 SSR PROJECT/src/views/index.ejs
@@ -1,11 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h2>HOME PAGE</h2>
-</body>
-</html>
+
+<%- include('partial/header.ejs', {title}) %>
+<%- include('partial/navbar.ejs', {user})%>
+<%- include('partial/footer.ejs') %>
+
