--- a/SSR PROJECT/src/views/index.ejs
+++ b/SSR PROJECT/src/views/index.ejs
@@ -1,5 +1,7 @@
 
 <%- include('partial/header.ejs', {title}) %>
 <%- include('partial/navbar.ejs', {user})%>
+<%- include('partial/posts.ejs', {posts})%>
+
 <%- include('partial/footer.ejs') %>
 
