feat: Add cookie-parser middleware and implement post update and delete functionality; enhance user profile and post views

--- a/SSR PROJECT/src/views/create.ejs
+++ b/SSR PROJECT/src/views/create.ejs
@@ -1,5 +1,5 @@
 <%- include("partial/header") %>
-
+<h2>Create Page</h2>
 <form action="/posts/create" method="post">
 
     <label for="title">Title :</label>
