--- a/SSR PROJECT/src/views/login.ejs
+++ b/SSR PROJECT/src/views/login.ejs
@@ -11,7 +11,7 @@
         <label for="password">Password</label>
         <input type="password" id="password" name="password" required>
 
-        <button type="submit">Register</button>
+        <button type="submit">Login</button>
 
         <p>if you dont have an account? <a href="/users/register">register</a></p>
     </form>
