--- a/SSR PROJECT/src/views/partial/navbar.ejs
+++ b/SSR PROJECT/src/views/partial/navbar.ejs
@@ -4,6 +4,9 @@
         <a href="">Home</a>
         <a href="">About</a>
         <a href="/posts/create">create</a>
+        <a href="/users/profile/<%= user._id %>">
+            <img  src=<%= user.profile %> alt="profile">
+        </a>
         <div class="login-btn">
             <% if (!user) { %>
                 <a href="/users/login">login</a>
