feat: Integrate ImageKit for profile image uploads; implement user profile update functionality

--- a/SSR PROJECT/src/views/profile.ejs
+++ b/SSR PROJECT/src/views/profile.ejs
@@ -11,7 +11,7 @@
         <p><%= user.email %></p>
        </div>
        <div class="bottom">
-        <a href="/user/update/<%= user._id %>">Update profile</a>
+        <a href="/users/profile/update/<%= user._id %>">Update profile</a>
        </div>
     </div>
 </div>
